[package]
name = "explora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "explora-common", path = "../common"}
common_log = { package = "explora-common-log", path = "../common/log"}
pollster = "0.3.0"
tracing.workspace = true
wgpu = "0.19.3"
winit = "0.29.14"
